# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "./timext",
    "./timext-*",
]

[workspace.package]
version = "0.3.3"
edition = "2021"
authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
license = "MIT"

[workspace.dependencies]
time = { version = "0.3.30" }
thiserror = { version = "1.0.50" }

serde = { version = "1.0.190", default-features = false }
rand = { version = "0.8.5", default-features = false }

timext-month = { path = "./timext-month", version = "0.3.3" }
timext-parts = { path = "./timext-parts", version = "0.3.3" }