# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "timext"
readme = "./README.md"

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

repository = "https://github.com/xwde/time"
homepage = "https://github.com/xwde/time"
documentation = "https://docs.rs/timext"
categories = ["date-and-time", "parser-implementations", "value-formatting"]
keywords = ["date", "time", "calendar", "duration"]
description = """
The collection of time-rs/time extensions for calendar
arithmetics and incomplete time formats.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[features]
default = []
full = [
    "duration",
    "partial",
]

duration = ["dep:timext-month"]
partial = ["dep:timext-parts"]

serde = ["timext-month/serde", "timext-parts/serde"]
rand = ["timext-month/rand", "timext-parts/rand"]

[dependencies]
time = { workspace = true }
thiserror = { workspace = true }

timext-month = { workspace = true, optional = true }
timext-parts = { workspace = true, optional = true }
